create layout by code and xml

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,10 @@
 lab01_1/.idea/*
 lab01_2a/.idea/*
 lab01_2a/.idea
+lab01_2b/.idea
+lab01_2b/.idea/*
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
 .idea/dictionaries
 .idea/libraries
-
