--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ lab01_2a/.idea/*
 lab01_2a/.idea
 lab01_2b/.idea
 lab01_2b/.idea/*
+lab01_2c/.idea
+lab01_2c/.idea/*
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
