--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ lab01_2b/.idea
 lab01_2b/.idea/*
 lab01_2c/.idea
 lab01_2c/.idea/*
+lab02_1/.idea
+lab02_1/.idea/*
+lab02_2/.idea
+lab02_2/.idea/*
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
