--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ lab02_1/.idea
 lab02_1/.idea/*
 lab02_2/.idea
 lab02_2/.idea/*
+lab02_3/.idea
+lab02_3/.idea/*
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
