--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ lab02_2/.idea
 lab02_2/.idea/*
 lab02_3/.idea
 lab02_3/.idea/*
+lab02_4/.idea
+lab02_4/.idea/*
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
