--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ lab02_3/.idea
 lab02_3/.idea/*
 lab02_4/.idea
 lab02_4/.idea/*
+lab03_1/.idea
+lab03_1/.idea/*
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
