--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ lab02_4/.idea
 lab02_4/.idea/*
 lab03_1/.idea
 lab03_1/.idea/*
+lab03_2/.idea
+lab03_2/.idea/*
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
