--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ lab03_1/.idea
 lab03_1/.idea/*
 lab03_2/.idea
 lab03_2/.idea/*
+lab03_3/.idea
+lab03_3/.idea/*
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
