--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,10 @@ lab03_2/.idea
 lab03_2/.idea/*
 lab03_3/.idea
 lab03_3/.idea/*
+lab03_4/.idea
+lab03_4/.idea/*
+lab03_5/.idea
+lab03_5/.idea/*
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
